syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// MageTalents message.
message MageTalents {
    // Arcane
    int32 arcane_concentration = 1;
    int32 improved_counterspell = 2;
    int32 netherwind_presence = 3;
    int32 torment_the_weak = 4;
    int32 invocation = 5;
    int32 improved_arcane_missiles = 6;
    int32 improved_blink = 7;
    int32 arcane_flows = 8;
    bool presence_of_mind = 9;
    int32 missile_barrage = 10;
    int32 prismatic_cloak = 11;
    int32 improved_polymorph = 12;
    bool arcane_tactics = 13;
    int32 incanters_absorption = 14;
    int32 improved_arcane_explosion = 15;
    int32 arcane_potency = 16;
    bool slow = 17;
    int32 nether_vortex = 18;
    bool focus_magic = 19;
    int32 improved_mana_gem = 20;
    bool arcane_power = 21;
    // Fire
    int32 master_of_elements = 22;
    int32 burning_soul = 23;
    int32 improved_fire_blast = 24;
    int32 ignite = 25;
    int32 fire_power = 26;
    int32 blazing_speed = 27;
    int32 impact = 28;
    int32 cauterize = 29;
    bool blast_wave = 30;
    bool hot_streak = 31;
    int32 improved_scorch = 32;
    bool molten_shields = 33;
    bool combustion = 34;
    int32 improved_hot_streak = 35;
    bool firestarter = 36;
    int32 improved_flamestrike = 37;
    bool dragons_breath = 38;
    int32 molten_fury = 39;
    int32 pyromaniac = 40;
    int32 critical_mass = 41;
    bool living_bomb = 42;
    // Frost
    int32 early_frost = 43;
    int32 piercing_ice = 44;
    int32 shatter = 45;
    int32 ice_floes = 46;
    int32 improved_cone_of_cold = 47;
    int32 piercing_chill = 48;
    int32 permafrost = 49;
    int32 ice_shards = 50;
    bool icy_veins = 51;
    int32 fingers_of_frost = 52;
    int32 improved_freeze = 53;
    int32 enduring_winter = 54;
    bool cold_snap = 55;
    int32 brain_freeze = 56;
    int32 shattered_barrier = 57;
    bool ice_barrier = 58;
    int32 reactive_barrier = 59;
    int32 frostfire_orb = 60;
    bool deep_freeze = 61;
}

enum MagePrimeGlyph {
    MagePrimeGlyphNone = 0;
    GlyphOfArcaneMissiles = 42735;
    GlyphOfFireball = 42739;
    GlyphOfFrostbolt = 42742;
    GlyphOfPyroblast = 42743;
    GlyphOfIceLance = 42745;
    GlyphOfMageArmor = 42749;
    GlyphOfMoltenArmor = 42751;
    GlyphOfConeOfCold = 42753;
    GlyphOfFrostfire = 44684;
    GlyphOfArcaneBlast = 44955;
    GlyphOfDeepFreeze = 45736;
    GlyphOfArcaneBarrage = 45738;
    GlyphOfLivingBomb = 63539;
}

enum MageMajorGlyph {
    MageMajorGlyphNone = 0;
    GlyphOfArcanePower = 42736;
    GlyphOfBlink = 42737;
    GlyphOfEvocation = 42738;
    GlyphOfFrostNova = 42741;
    GlyphOfIceBlock = 42744;
    GlyphOfIcyVeins = 42746;
    GlyphOfInvisibility = 42748;
    GlyphOfPolymorph = 42752;
    GlyphOfDragonsBreath = 42754;
    GlyphOfBlastWave = 44920;
    GlyphOfSlow = 45737;
    GlyphOfIceBarrier = 45740;
    GlyphOfManaShield = 50045;
    GlyphOfFrostArmor = 69773;
}

enum MageMinorGlyph {
    MageMinorGlyphNone = 0;
    GlyphOfArcaneBrilliance = 43339;
    GlyphOfConjuring = 43359;
    GlyphOfTheMonkey = 43360;
    GlyphOfThePenguin = 43361;
    ZzoldglyphOfTheBearCub = 43362;
    GlyphOfSlowFall = 43364;
    GlyphOfMirrorImage = 45739;
    GlyphOfArmors = 63416;
}

// END GENERATED

message MageOptions {
}

message ArcaneMage {
	message Rotation {
	}

	message Options {
		MageOptions class_options = 1;
		int32 focus_magic_percent_uptime = 2;
		UnitReference focus_magic_target = 3;
	}
	Options options = 1;
}

message FireMage {
	message Rotation {
		// Minimum Combustion threshold to cast Combustion at during lust
		int32 combust_threshold = 4;
		double combust_last_moment_lust_percentage = 5;
		double combust_no_lust_percentage = 6;

		// deprecated fields
		int32 ignite_combust_threshold = 1 [deprecated=true];
		double ignite_last_moment_lust_percentage = 2 [deprecated=true];
		double ignite_no_lust_percentage = 3 [deprecated=true];
	}

	message Options {
		MageOptions class_options = 1;
	}
	Options options = 1;
}

message FrostMage {
	message Rotation {
	}

	message Options {
		MageOptions class_options = 1;
		// Chance for water elemental to disobey, doing nothing rather than cast.
		double water_elemental_disobey_chance = 2;
	}
	Options options = 1;
}
